# Yggdrasil

Q/QCDNUM/: build_tarballs.jl
Q/QCDNUM/bundled/patches/: CMakeLists.txt
